--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,52 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>IssuesList</title>
-  <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+  <head>
+    <meta charset="utf-8" />
+    <title>Naomi's Open Issues</title>
+    <base href="/" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="Naomi maintains multiple open source projects. This site allows you to view those projects and see which issues are open for contribution."
+    />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <!--OpenGraph and Twitter-->
+    <meta property="og:title" content="Naomi's Open Issues" />
+    <meta property="og:url" content="https://contribute.nhcarrigan.com" />
+    <meta
+      property="og:image"
+      content="https://cdn.nhcarrigan.com/og-image.png"
+    />
+    <meta
+      property="og:description"
+      content="Naomi maintains multiple open source projects. This site allows you to view those projects and see which issues are open for contribution."
+    />
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:creator" content="@nhcarrigan" />
+    <!--Favicon-->
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="./assets/favicon/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="./assets/favicon/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="./assets/favicon/favicon-16x16.png"
+    />
+    <link rel="manifest" href="./assets/favicon/site.webmanifest" />
+    <meta name="msapplication-config" content="./assets/favicon/browserconfig.xml" />
+    <meta name="msapplication-TileColor" content="#3a3240" />
+    <meta name="theme-color" content="#3a3240" />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
