--- a/src/index.html
+++ b/src/index.html
@@ -42,9 +42,23 @@
       href="./assets/favicon/favicon-16x16.png"
     />
     <link rel="manifest" href="./assets/favicon/site.webmanifest" />
-    <meta name="msapplication-config" content="./assets/favicon/browserconfig.xml" />
+    <meta
+      name="msapplication-config"
+      content="./assets/favicon/browserconfig.xml"
+    />
     <meta name="msapplication-TileColor" content="#3a3240" />
     <meta name="theme-color" content="#3a3240" />
+    <script type="text/javascript">
+      window.$crisp = [];
+      window.CRISP_WEBSITE_ID = "7b84c2ab-1f6d-41a2-81fe-6de81cf83f09";
+      (function () {
+        d = document;
+        s = d.createElement("script");
+        s.src = "https://client.crisp.chat/l.js";
+        s.async = 1;
+        d.getElementsByTagName("head")[0].appendChild(s);
+      })();
+    </script>
   </head>
   <body>
     <app-root></app-root>
