--- a/src/index.html
+++ b/src/index.html
@@ -48,6 +48,16 @@
     />
     <meta name="msapplication-TileColor" content="#3a3240" />
     <meta name="theme-color" content="#3a3240" />
+    <!--Styling-->
+    <link
+      rel="preload"
+      href="https://cdnjs.cloudflare.com/ajax/libs/nes.css/2.3.0/css/nes-core.css"
+      as="style"
+      integrity="sha512-6KxZESBNb1SsaRkDnh4CcHZic8RXYloIiDK6nBcwv2AwkUsaJxWGEqwdGfT4Xh51GbqJSN0/+OVZaqri150LFA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+      onload="this.onload=null;this.rel='stylesheet'"
+    />
     <script type="text/javascript">
       window.$crisp = [];
       window.CRISP_WEBSITE_ID = "7b84c2ab-1f6d-41a2-81fe-6de81cf83f09";
